Remove the automatic unmounting on loss of connection

BUG: 415165
(cherry picked from commit 85141999823ec71eb27a26bffe812bc2c5fe00a7)